--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,20 @@
-@use 'variables/variables' as var;
-@use 'variables/mixins';
-@use 'components/buttons';
-
+@use '../scss/variables/variables' as var;
+@use '../scss/variables/mixins';
+/**
+ * ========================================
+ * LIST
+ * ========================================
+ */
 @use 'layouts/list';
+/**
+ * ========================================
+ * LIST NODES
+ * ========================================
+ */
+@use '../scss/components/list-nodes';
+/**
+ * ========================================
+ * ROADMAP
+ * ========================================
+ */
 @use 'layouts/roadmap';
