wtorek restyl listy

--- a/scss/layouts/_list.scss
+++ b/scss/layouts/_list.scss
@@ -26,4 +26,7 @@
     margin-bottom: 0.5rem;
     line-height: 1.5;
   }
+  &__open-modal--btn {
+    @include mixins.open-modal($color: var.$filterGreen);
+  }
 }
