--- a/css/layout.css
+++ b/css/layout.css
@@ -342,7 +342,7 @@ a {
 }
 
 .task-group::after {
-  content: "";
+  content: '';
   border-right: solid 0.5px var(--glass-border);
   height: 80%;
   margin-left: 0.4rem;
@@ -356,7 +356,7 @@ a {
   font-weight: 400;
 }
 .task-date::after {
-  content: "";
+  content: '';
   border-right: solid 0.5px var(--glass-border);
   height: 80%;
   margin-left: 0.4rem;
@@ -380,7 +380,7 @@ a {
   font-weight: 400;
 }
 .item-container::after {
-  content: "";
+  content: '';
   border-bottom: solid 0.5px var(--glass-border);
   width: 100%;
   margin-top: 0.5rem;
@@ -410,7 +410,7 @@ a {
 .summary {
   width: auto;
 }
-.task-modal {
+/* .task-modal {
   display: flex;
   position: fixed;
   flex-direction: column;
@@ -429,7 +429,7 @@ a {
   text-align: center;
   z-index: 10;
   transition: opacity 0.3s, backdrop-filter 0.5s;
-}
+} */
 .modal-section-form {
   display: flex;
   position: relative;
@@ -452,9 +452,7 @@ a {
   justify-content: center;
   align-items: center;
 }
-#modal-title {
-  margin-bottom: 1rem;
-}
+
 .task-discription {
   width: 90%;
   height: 50%;
@@ -478,10 +476,6 @@ a {
   opacity: 0;
 }
 
-.task-title {
-  margin: 0.5rem 0 0rem 1rem;
-  color: var(--color-text-secondary);
-}
 .task-title::placeholder {
   transition: all 0.8s ease;
 }
