--- a/scss/components/_list-nodes.scss
+++ b/scss/components/_list-nodes.scss
@@ -11,16 +11,64 @@
   scroll-snap-align: start;
   padding: 0.5rem;
   &__main {
-    @include mixins.flex($direction: row, $height: 30%, $width: 100%);
+    @include mixins.flex($direction: row, $width: 100%);
     gap: 1rem;
     margin-bottom: 0.5rem;
     &--title {
       margin-right: auto;
+      letter-spacing: 0.5px;
       @include mixins.set-text(main, medium, lg);
     }
     &--toggle {
       @include mixins.styled-button($size-w: 1.5rem, $color: var.$filterGreen);
       padding: 0.2rem;
     }
+    &--accordion-btn {
+      @include mixins.styled-button(
+        $size-w: 1rem,
+        $color: var.$textSecondary,
+        $margin-r: 1rem
+      );
+    }
+  }
+  &__divider {
+    color: var.$accentBorder;
+    @include mixins.dividier('fancy', 1px, 80%);
+    margin-bottom: 0.2rem;
+
+    box-shadow: -4px -6px 14px 7px rgba(255, 255, 255, 5%),
+      0 7px 11px 4px rgba(0, 0, 0, 0.6);
+  }
+  &__details {
+    @include mixins.flex($width: 90%);
+    @include mixins.set-text(muted, light, reg);
+    letter-spacing: 0.2px;
+    line-height: 1.5;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+    max-height: 12rem;
+    overflow-y: auto;
+    margin-top: 0.5rem;
+    -webkit-overflow-scrolling: touch;
+    padding-right: 0.25rem;
+    -webkit-mask-image: linear-gradient(
+      to bottom,
+      transparent 0,
+      black 10px,
+      black calc(100% - 10px),
+      transparent 100%
+    );
+    mask-image: linear-gradient(
+      to bottom,
+      transparent 0,
+      black 10px,
+      black calc(100% - 10px),
+      transparent 100%
+    );
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 }
