--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,12 @@
 @use '../scss/components/list-nodes';
 /**
  * ========================================
+ * LIST MODAL
+ * ========================================
+ */
+@use '../scss/components/task-modal';
+/**
+ * ========================================
  * ROADMAP
  * ========================================
  */
