--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -5,7 +5,8 @@ $glassBg: rgba(22, 22, 22, 0.6);
 $textPrimary: #ffffff;
 $textSecondary: #aaaaaa;
 $textBlack: #000;
-$divider: rgba(117, 112, 112, 0.404);
+$textMuted: #cccccc;
+$divider: #2a2a2a;
 $bgMajor: #262629;
 $activedayBG: rgba(107, 205, 206, 0.1);
 $filterGreen: #62c76b;
@@ -13,11 +14,21 @@ $itemMedium: #ff8c32;
 $itemHigh: #db5656;
 $borderOne: rgba(107, 106, 106, 0.1);
 
-//  Accents
-$shadow-main: inset 0 1px 1px rgba(255, 255, 255, 0.05),
+//  shadows:
+//shadow inset
+$shadow-in-main: inset 0 1px 1px rgba(255, 255, 255, 0.05),
   0 8px 24px rgba(0, 0, 0, 0.6);
-$shadow-light: inset 0 1px 1px rgba(200, 220, 255, 0.35),
+$shadow-in-light: inset -1px 0px 20px 5px rgba(200, 220, 255, 0.35),
   0 8px 15px rgba(200, 220, 255, 0.15);
+//shadows outset
+$shadow-out-main: -4px -6px 14px 7px rgba(255, 255, 255, 5%),
+  0 7px 11px 4px rgba(0, 0, 0, 0.6);
+//modal colors:
+$modal-btn-green-from: #00c9a7;
+$modal-btn-green-to: #008f73;
+$modal-btn-red-from: #e63946;
+$modal-btn-red-to: #a4161a;
+//  Accents
 $accent: #6bcdce;
 $accentLight: #9be5ec;
 $accentBorder: #44787c;
@@ -54,4 +65,5 @@ $textColors: (
   'main': $textPrimary,
   'secondary': $textSecondary,
   'emphasized': $textBlack,
+  'muted': $textMuted,
 );
