--- a/scss/components/_task-modal.scss
+++ b/scss/components/_task-modal.scss
@@ -9,6 +9,7 @@
   left: 0;
   &__section {
     @include mixins.flex($height: 35%, $width: 80%);
+    transition: opacity 1s ease;
   }
 
   &__form {
@@ -42,26 +43,35 @@
     width: 100%;
     justify-content: space-evenly;
     flex-direction: row-reverse;
-    &:first-child {
+    > button:first-child {
+      box-shadow: 0 1px 2px rgba(255, 255, 255, 0.2);
       @include mixins.glass-button(
         var.$modal-btn-green-from,
         var.$modal-btn-green-to
       );
     }
+    > button:last-child {
+      box-shadow: 0 1px 2px rgba(255, 255, 255, 0.2);
+      @include mixins.glass-button(
+        var.$modal-btn-red-from,
+        var.$modal-btn-red-to
+      );
+    }
   }
   & &__title-wrap {
     @include mixins.flex($width: 100%);
-    top: 20%;
+    top: 16%;
     z-index: 1;
     left: 0;
   }
 
   &__title {
     @include mixins.set-text(main, semibold, xl);
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 
     &-divider {
       color: var.$modal-btn-green-from;
-      @include mixins.dividier('fancy', 1px, $width: 90%);
+      @include mixins.dividier('normal', 2px, $width: 90%);
       margin-bottom: 0.2rem;
 
       box-shadow: -4px -6px 14px 7px rgba(255, 255, 255, 5%),
