--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @use '../scss/variables/variables' as var;
 @use '../scss/variables/mixins';
+@use '../scss/variables/utils';
 /**
  * ========================================
  * LIST
