--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -1,18 +1,22 @@
 // Colors:
 $primary: #0d0d0d;
 $bgSoft: #1c1c1e;
+$bgMajor: #262629;
+
 $glassBg: rgba(22, 22, 22, 0.6);
+$activedayBG: rgba(107, 205, 206, 0.1);
+$borderOne: rgba(107, 106, 106, 0.1);
+
 $textPrimary: #ffffff;
 $textSecondary: #aaaaaa;
 $textBlack: #000;
 $textMuted: #cccccc;
+
 $divider: #2a2a2a;
-$bgMajor: #262629;
-$activedayBG: rgba(107, 205, 206, 0.1);
 $filterGreen: #62c76b;
 $itemMedium: #ff8c32;
 $itemHigh: #db5656;
-$borderOne: rgba(107, 106, 106, 0.1);
+$formError: #ff5f5f;
 
 //  shadows:
 //shadow inset
